dep: spring boot update to 3.4.4